# desperateSearch

./: .env.example  .gitignore  README.md  bot.py  config.py  main.py  pyproject.toml  requirements.txt
agent/: agent.py
agent/prompts/: cover_letter_prompt.py
agent/schemas/: agent_schemas.py
agent/utils/: cv_parser.py
bot/: bot.py  database.py
bot/handlers/: jobs.py  setup.py  states.py
bot/storage/: jobs.db
bot/utils/: storage.py
handlers/: jobs.py  setup.py
schemas/: agent_schemas.py
services/: agent.py
utils/: keyboards.py
