[project]
name = "jobsearch-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "langchain>=1.2.17",
    "langchain-anthropic>=1.4.2",
    "langgraph>=1.1.10",
    "pdfplumber>=0.11.9",
    "playwright>=1.59.0",
    "pydantic>=2.13.3",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
    "ruff>=0.15.12",
]
